Hemos terminado el decorador, con el código del profe, antes de que yo empiece a agregar las luces

--- a/Decorador01/Decorador01/Decorador01.csproj
+++ b/Decorador01/Decorador01/Decorador01.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CAuto.cs" />
+    <Compile Include="CNitrogeno.cs" />
+    <Compile Include="CSistemaSonido.cs" />
+    <Compile Include="CSuspension.cs" />
+    <Compile Include="IComponente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
