Acabo de agregarle las luces, creando una nueva clase, e implementandola en el program

--- a/Decorador01/Decorador01/Decorador01.csproj
+++ b/Decorador01/Decorador01/Decorador01.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CAuto.cs" />
+    <Compile Include="CLuces.cs" />
     <Compile Include="CNitrogeno.cs" />
     <Compile Include="CSistemaSonido.cs" />
     <Compile Include="CSuspension.cs" />
