--- a/Bridge03/Bridge03/Bridge03.csproj
+++ b/Bridge03/Bridge03/Bridge03.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CAbstraccion.cs" />
+    <Compile Include="CImplementacion1.cs" />
+    <Compile Include="CImplementacion2.cs" />
+    <Compile Include="CImplementacion3.cs" />
+    <Compile Include="IBridge.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
