--- a/ProyectoPD02/ProyectoPD02/ProyectoPD02.csproj
+++ b/ProyectoPD02/ProyectoPD02/ProyectoPD02.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CComponente.cs" />
+    <Compile Include="CCompuesto.cs" />
+    <Compile Include="IComponente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
