--- a/ProyectoPD02/ProyectoPD02/ProyectoPD02.csproj
+++ b/ProyectoPD02/ProyectoPD02/ProyectoPD02.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CAbstraccion.cs" />
     <Compile Include="CComponente.cs" />
     <Compile Include="CCompuesto.cs" />
+    <Compile Include="CImplementacion1.cs" />
+    <Compile Include="IBridge.cs" />
     <Compile Include="IComponente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
