--- a/Fachada07/Fachada07/Fachada07.csproj
+++ b/Fachada07/Fachada07/Fachada07.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CFachada.cs" />
     <Compile Include="CSistemaCompras.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
