Terminamos la fabrica de computadoras

--- a/MetodoFabricaComputadoras/MetodoFabricaComputadoras/MetodoFabricaComputadoras.csproj
+++ b/MetodoFabricaComputadoras/MetodoFabricaComputadoras/MetodoFabricaComputadoras.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CCaja.cs" />
     <Compile Include="CCreador.cs" />
     <Compile Include="CGamer.cs" />
     <Compile Include="CMac.cs" />
